--- a/Aplicativo_Corp_InterCable/AgregarCliente.resx
+++ b/Aplicativo_Corp_InterCable/AgregarCliente.resx
@@ -120,4 +120,17 @@
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="Clear.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAFgAAABYAXjaS2IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABIUlEQVQ4T+XRv0tCURTA8aO0JNUUhOLgGhU5NDYFDaKDY4F/QFBB0NpgU4tOQU1BEISTIIJuQhRB
+        bUEEgg0WBS0RGAQtz+/Ra7wDF/+BLnx477x7flzukyAIvFh5/OIHRV+O8n5UrsE59v5TA1YMWqiO0MIZ
+        Ku6bipsaE4ik8Amd7NNB3tSYYNjgDXpsn3uMbbCEV1ziAQ1c4RY1PCJrakzAJqrYxwGOUUAdq7jBgqkx
+        gcgWytATZKCT56GnmsI7Jk2NCURK2EYbCXwgiSfM4CWcP6gxgcgzVtDFIq6RwwU29RnOdzUyAb2sNdxB
+        Jx4ijV2sYwNN9673svzXwHWJ4xQ7o40wt6+nimIOEejQ5ChhFj3ny+MbRZxg8BtZ0yIS7QNo1ap0wYwb
+        MgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
