--- a/Aplicativo_Corp_InterCable/FormPlanes.resx
+++ b/Aplicativo_Corp_InterCable/FormPlanes.resx
@@ -120,14 +120,24 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="Clear.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAFgAAABYAXjaS2IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAABIUlEQVQ4T+XRv0tCURTA8aO0JNUUhOLgGhU5NDYFDaKDY4F/QFBB0NpgU4tOQU1BEISTIIJuQhRB
-        bUEEgg0WBS0RGAQtz+/Ra7wDF/+BLnx477x7flzukyAIvFh5/OIHRV+O8n5UrsE59v5TA1YMWqiO0MIZ
-        Ku6bipsaE4ik8Amd7NNB3tSYYNjgDXpsn3uMbbCEV1ziAQ1c4RY1PCJrakzAJqrYxwGOUUAdq7jBgqkx
-        gcgWytATZKCT56GnmsI7Jk2NCURK2EYbCXwgiSfM4CWcP6gxgcgzVtDFIq6RwwU29RnOdzUyAb2sNdxB
-        Jx4ijV2sYwNN9673svzXwHWJ4xQ7o40wt6+nimIOEejQ5ChhFj3ny+MbRZxg8BtZ0yIS7QNo1ap0wYwb
-        MgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        VgAAAFYB3FMHnAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEhSURBVDhP5dG/
+        S0JRFMDxo7Qk1RSE4uAaFTk0NgUNooNjgX9AUEHQ2mBTi05BTUEQhJMggm5CFEFtQQSCDRYFLREYBC3P
+        79FrvAMX/4EufHjvvHt+XO6TIAi8WHn84gdFX47yflSuwTn2/lMDVgxaqI7Qwhkq7puKmxoTiKTwCZ3s
+        00He1Jhg2OANemyfe4xtsIRXXOIBDVzhFjU8ImtqTMAmqtjHAY5RQB2ruMGCqTGByBbK0BNkoJPnoaea
+        wjsmTY0JRErYRhsJfCCJJ8zgJZw/qDGByDNW0MUirpHDBTb1Gc53NTIBvaw13EEnHiKNXaxjA033rvey
+        /NfAdYnjFDujjTC3r6eKYg4R6NDkKGEWPefL4xtFnGDwG1nTIhLtA2jVqnTBjBsyAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        VAAAAFQBo63EFQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEhSURBVDhP5dG/
+        S0JRFMDxo7Qk1RSE4uAaFTk0NgUNooNjgX9AUEHQ2mBTi05BTUEQhJMggm5CFEFtQQSCDRYFLREYBC3P
+        79FrvAMX/4EufHjvvHt+XO6TIAi8WHn84gdFX47yflSuwTn2/lMDVgxaqI7Qwhkq7puKmxoTiKTwCZ3s
+        00He1Jhg2OANemyfe4xtsIRXXOIBDVzhFjU8ImtqTMAmqtjHAY5RQB2ruMGCqTGByBbK0BNkoJPnoaea
+        wjsmTY0JRErYRhsJfCCJJ8zgJZw/qDGByDNW0MUirpHDBTb1Gc53NTIBvaw13EEnHiKNXaxjA033rvey
+        /NfAdYnjFDujjTC3r6eKYg4R6NDkKGEWPefL4xtFnGDwG1nTIhLtA2jVqnTBjBsyAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
