--- a/Aplicativo_Corp_InterCable/Servicios.resx
+++ b/Aplicativo_Corp_InterCable/Servicios.resx
@@ -117,7 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Nombres.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        VAAAAFQBo63EFQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAEhSURBVDhP5dG/
+        S0JRFMDxo7Qk1RSE4uAaFTk0NgUNooNjgX9AUEHQ2mBTi05BTUEQhJMggm5CFEFtQQSCDRYFLREYBC3P
+        79FrvAMX/4EufHjvvHt+XO6TIAi8WHn84gdFX47yflSuwTn2/lMDVgxaqI7Qwhkq7puKmxoTiKTwCZ3s
+        00He1Jhg2OANemyfe4xtsIRXXOIBDVzhFjU8ImtqTMAmqtjHAY5RQB2ruMGCqTGByBbK0BNkoJPnoaea
+        wjsmTY0JRErYRhsJfCCJJ8zgJZw/qDGByDNW0MUirpHDBTb1Gc53NTIBvaw13EEnHiKNXaxjA033rvey
+        /NfAdYnjFDujjTC3r6eKYg4R6NDkKGEWPefL4xtFnGDwG1nTIhLtA2jVqnTBjBsyAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
